# ParticleScatteringStudy

./: .gitignore  CMakeLists.txt  ParticleScatteringStudy.pro  README.md  main.cc  run.mac  runAll.bash  runScreen.bash  vis.mac
ana/: AnalysisClass.cc  AnalysisClass.hh  Makefile  ana.cc  plot.C  plot.cc
include/: Constants.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrimaryMessenger.hh  RunAction.hh  RunMessenger.hh  StackingAction.hh  StackingMessenger.hh  SteppingAction.hh
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryMessenger.cc  RunAction.cc  RunMessenger.cc  StackingAction.cc  StackingMessenger.cc  SteppingAction.cc
